--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,3 @@
 <p>Seeing "I Worked!" below means that React rendered our ES6 component.</p>
 
-<div data-react-class="Tester" data-react-props=<%= { title: "I Worked!" }.to_json %>></div>
+<%= content_tag(:div, '', data: { "react-class" => "Tester", "react-props" => { title: "I Worked!" }.to_json }) %>
